# solis-api

./: .gitignore  dashboard_template.json  panel_template.json  pyproject.toml
config/: config.yaml
src/: api_header.py  api_requests.py  collector.py  dashboard.py  influx.py  logger.py  main.py  parse.py  settings.py
