[tool.poetry]
name = "solis-api"
version = "0.1.0"
description = "Collects data from Solis inverters"
authors = ["xyberii4 <61101529+xyberii4@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pyyaml = "^6.0.2"
pytz = "^2025.1"
influxdb-client = "^1.48.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
